@@ -5,6 +5,7 @@ import org.junit.jupiter.api.Test;
 
 import java.net.URLDecoder;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 
 /**
  * @author AS
@@ -27,11 +28,27 @@ public class DesEncDecTest {
         try {
             String t1 = desEnc.encrypt("0ec4dbfdfb7945f0a6ca61fd14065a77");
             System.out.println(t1);
-            String encodeURL1 = URLEncoder.encode(t1, "UTF-8");
+            String encodeURL1 = URLEncoder.encode(t1, StandardCharsets.UTF_8);
             System.out.println("-encodeURL-->>" + encodeURL1);
-            String decode = URLDecoder.decode(encodeURL1, "UTF-8");
+            String decode = URLDecoder.decode(encodeURL1, StandardCharsets.UTF_8);
             System.out.println("-decode--->>" + decode);
             System.out.println(desEnc.decrypt(decode));
+        } catch (Exception e) {
+            e.printStackTrace();
+        }
+    }
+
+    @Test
+    void urlTest() {
+        DesEncDecUtils desEnc = DesEncDecUtils.getInstance("box_security");
+        try {
+            String t1 = desEnc.encrypt("http://qr.hnlot.com.cn/box/openDoor?boxCode=19FE0E30CF");
+            System.out.println("---加密后>>" + t1);
+            String encodeURL1 = URLEncoder.encode(t1, StandardCharsets.UTF_8);
+            System.out.println("-encodeURL-->>" + encodeURL1);
+            String decode = URLDecoder.decode(encodeURL1, StandardCharsets.UTF_8);
+            System.out.println("-decode--->>" + decode);
+            System.out.println("--解密->>" + desEnc.decrypt(decode));
         } catch (Exception e) {
             e.printStackTrace();
         }
